@@ -4,6 +4,7 @@ import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import com.programmingtechie.appointment_service.enums.Session;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -19,13 +20,18 @@ import com.programmingtechie.appointment_service.repository.appointment.TimeFram
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import java.util.Optional;
+import java.util.Arrays;
+import java.util.Comparator;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
+@Transactional(readOnly = true)
 public class TimeFrameService {
-    final TimeFrameRepository timeFrameRepository;
-    final TimeFrameMapper timeFrameMapper;
+    private final TimeFrameRepository timeFrameRepository;
+    private final TimeFrameMapper timeFrameMapper;
 
     private void validateTimeFrameRequest(TimeFrameRequest request) {
         if (request == null) {
@@ -40,24 +46,81 @@ public class TimeFrameService {
         if (request.getStartTime().isAfter(request.getEndTime())) {
             throw new IllegalArgumentException("Thời gian bắt đầu phải trước thời gian kết thúc!");
         }
+        if (request.getStartTime().equals(request.getEndTime())) {
+            throw new IllegalArgumentException("Thời gian bắt đầu không được trùng thời gian kết thúc!");
+        }
+        // Kiểm tra thời gian có thuộc session nào không
+        Session startSession = Session.fromTime(request.getStartTime());
+        Session endSession = Session.fromTime(request.getEndTime());
+        if (!startSession.equals(endSession)) {
+            throw new IllegalArgumentException("Thời gian bắt đầu và kết thúc phải trong cùng một buổi!");
+        }
     }
 
+
+    @Transactional
     public ResponseEntity<TimeFrameResponse> create(TimeFrameRequest request) {
         validateTimeFrameRequest(request);
 
-        if (timeFrameRepository.existsByStartTimeAndEndTime(request.getStartTime(), request.getEndTime())) {
-            throw new IllegalArgumentException("Khung giờ này đã tồn tại!");
+        Optional<TimeFrame> existingTimeFrame = timeFrameRepository.findOverlappingTimeFrame(
+                request.getStartTime(),
+                request.getEndTime(),
+                true
+        );
+
+        if (existingTimeFrame.isPresent()) {
+            throw new IllegalArgumentException("Đã tồn tại khung giờ khám chồng chéo với khung giờ này!");
         }
 
+        Session session = Session.fromTime(request.getStartTime());
         TimeFrame timeFrame = TimeFrame.builder()
-                .id(UUID.randomUUID().toString())
                 .startTime(request.getStartTime())
                 .endTime(request.getEndTime())
-                .session(request.getSession())
+                .session(session.getDescription())
+                .status(true)
                 .build();
 
         timeFrame = timeFrameRepository.save(timeFrame);
         return ResponseEntity.ok(timeFrameMapper.toTimeFrameResponse(timeFrame));
+    }
+
+    @Transactional
+    public ResponseEntity<TimeFrameResponse> updateById(String id, TimeFrameRequest request) {
+        if (id == null || id.trim().isEmpty()) {
+            throw new IllegalArgumentException("Vui lòng cung cấp mã giờ khám!");
+        }
+        validateTimeFrameRequest(request);
+
+        TimeFrame existingTimeFrame = timeFrameRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy giờ khám có mã " + id + "!"));
+
+        // Kiểm tra xem thời gian mới có bị chồng chéo với khung giờ khác không
+        Optional<TimeFrame> overlappingTimeFrame = timeFrameRepository.findOverlappingTimeFrame(
+                request.getStartTime(),
+                request.getEndTime(),
+                true
+        );
+
+        if (overlappingTimeFrame.isPresent() && !overlappingTimeFrame.get().getId().equals(id)) {
+            throw new IllegalArgumentException("Đã tồn tại khung giờ khám chồng chéo với khung giờ này!");
+        }
+
+        Session newSession = Session.fromTime(request.getStartTime());
+        existingTimeFrame.setStartTime(request.getStartTime());
+        existingTimeFrame.setEndTime(request.getEndTime());
+        existingTimeFrame.setSession(newSession.name());
+
+        existingTimeFrame = timeFrameRepository.save(existingTimeFrame);
+        return ResponseEntity.ok(timeFrameMapper.toTimeFrameResponse(existingTimeFrame));
+    }
+
+
+    public ResponseEntity<List<TimeFrameResponse>> getAllActiveTimeFrames() {
+        List<TimeFrame> timeFrames = timeFrameRepository.findAllActiveOrderBySessionAndTime(true);
+        List<TimeFrameResponse> responses = timeFrames.stream()
+                .map(timeFrameMapper::toTimeFrameResponse)
+                .toList();
+        return ResponseEntity.ok(responses);
     }
 
     public PageResponse<TimeFrameResponse> getAll(int page, int size) {
@@ -66,65 +129,53 @@ public class TimeFrameService {
 
         List<TimeFrameResponse> responses = pageData.getContent().stream()
                 .map(timeFrameMapper::toTimeFrameResponse)
-                .collect(Collectors.toList());
+                .toList();
 
-        return new PageResponse<>(pageData.getTotalPages(), page, size, pageData.getTotalElements(), responses);
+        return new PageResponse<>(
+                pageData.getTotalPages(),
+                page,
+                size,
+                pageData.getTotalElements(),
+                responses
+        );
     }
 
     public ResponseEntity<TimeFrameResponse> getById(String id) {
         if (id == null || id.trim().isEmpty()) {
-            throw new IllegalArgumentException("Vui lòng cung cấp mã khung giờ!");
+            throw new IllegalArgumentException("Vui lòng cung cấp mã giờ khám!");
         }
 
-        return timeFrameRepository
-                .findById(id)
-                .map(timeFrame -> ResponseEntity.ok(timeFrameMapper.toTimeFrameResponse(timeFrame)))
-                .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy khung giờ có mã " + id + "!"));
+        TimeFrame timeFrame = timeFrameRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy giờ khám có mã " + id + "!"));
+
+        return ResponseEntity.ok(timeFrameMapper.toTimeFrameResponse(timeFrame));
     }
 
-    public ResponseEntity<TimeFrameResponse> updateById(String id, TimeFrameRequest request) {
-        if (id == null || id.trim().isEmpty()) {
-            throw new IllegalArgumentException("Vui lòng cung cấp mã khung giờ!");
-        }
-        validateTimeFrameRequest(request);
-
-        TimeFrame existingTimeFrame = timeFrameRepository
-                .findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy khung giờ có mã " + id + "!"));
-
-        boolean isUpdated = false;
-
-        if (!existingTimeFrame.getStartTime().equals(request.getStartTime())) {
-            existingTimeFrame.setStartTime(request.getStartTime());
-            isUpdated = true;
-        }
-        if (!existingTimeFrame.getEndTime().equals(request.getEndTime())) {
-            existingTimeFrame.setEndTime(request.getEndTime());
-            isUpdated = true;
-        }
-        if (!existingTimeFrame.getSession().equals(request.getSession())) {
-            existingTimeFrame.setSession(request.getSession());
-            isUpdated = true;
-        }
-
-        if (!isUpdated) {
-            return ResponseEntity.ok(timeFrameMapper.toTimeFrameResponse(existingTimeFrame));
-        }
-
-        existingTimeFrame = timeFrameRepository.save(existingTimeFrame);
-        return ResponseEntity.ok(timeFrameMapper.toTimeFrameResponse(existingTimeFrame));
-    }
-
+    @Transactional
     public ResponseEntity<String> deleteById(String id) {
         if (id == null || id.trim().isEmpty()) {
-            throw new IllegalArgumentException("Vui lòng cung cấp mã khung giờ!");
+            throw new IllegalArgumentException("Vui lòng cung cấp mã giờ khám!");
         }
 
-        if (!timeFrameRepository.existsById(id)) {
-            throw new IllegalArgumentException("Không tìm thấy khung giờ có mã " + id + "!");
+        TimeFrame timeFrame = timeFrameRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy giờ khám có mã " + id + "!"));
+
+        if (timeFrameRepository.existsByDoctorSchedule(id)) {
+            timeFrame.setStatus(false);
+            timeFrameRepository.save(timeFrame);
+            return ResponseEntity.ok("Giờ khám có mã " + id + " đã được vô hiệu hóa.");
         }
 
-        timeFrameRepository.deleteById(id);
-        return ResponseEntity.ok("Khung giờ có mã " + id + " đã được xóa thành công.");
+        timeFrameRepository.delete(timeFrame);
+        return ResponseEntity.ok("Giờ khám có mã " + id + " đã được xóa thành công.");
     }
+
+    public ResponseEntity<List<String>> getAllSessions() {
+        List<String> sessions = Arrays.stream(Session.values())
+                .sorted(Comparator.comparingInt(Session::getOrder))
+                .map(Session::getDescription)
+                .toList();
+        return ResponseEntity.ok(sessions);
+    }
+
 }
